--- a/ServiceRecordApi/appsettings.json
+++ b/ServiceRecordApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Server=s;Database=records;Trusted_Connection=True;"
+  }
 }
